--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,26 +3,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    app:startDestination="@id/fragmentCurrencies">
 
     <fragment
-        android:id="@+id/FirstFragment"
-        android:name="com.geniusforapp.exchange.FirstFragment"
-        android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
-
+        android:id="@+id/fragmentCurrencies"
+        android:name="com.geniusforapp.exchange.ui.currencies.CurrenciesFragment"
+        android:label="@string/app_name"
+        tools:layout="@layout/fragment_currencies">
         <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
+            android:id="@+id/openConverter"
+            app:destination="@id/converterBottomSheet" />
     </fragment>
-    <fragment
-        android:id="@+id/SecondFragment"
-        android:name="com.geniusforapp.exchange.SecondFragment"
-        android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
-
-        <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
-    </fragment>
+    <dialog
+        android:id="@+id/converterBottomSheet"
+        android:name="com.geniusforapp.exchange.ui.converter.ConverterBottomSheet"
+        android:label="ConverterBottomSheet"
+        tools:layout="@layout/bottom_sheet_converter">
+        <argument
+            android:name="rate"
+            app:argType="com.geniusforapp.exchange.domain.entities.Rate" />
+    </dialog>
 </navigation>
