--- a/app/src/main/res/layout/fragment_currencies.xml
+++ b/app/src/main/res/layout/fragment_currencies.xml
@@ -44,6 +44,19 @@
             app:layout_constraintTop_toBottomOf="@id/imageError"
             tools:text="@tools:sample/lorem/random" />
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/buttonRetry"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:minHeight="60dp"
+            android:text="@string/button_retry"
+            app:backgroundTint="@color/colorAccent"
+            app:cornerRadius="100dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/textMessage" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
